--- a/b/bi/bir/birthdaycards.com.html
+++ b/b/bi/bir/birthdaycards.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the birthdaycards.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605041413id_/http%3A//www.birthdaycards.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the birthdaycards.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204231016id_/http%3A//www.birthdaycards.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>
@@ -35,8 +35,8 @@ i=u+x+'&sid='+id+'&m=1&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
 u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_blank">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
 if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=12650&amp;m=1&amp;f=b&amp;v=1.4&amp;c=421&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=12650&m=1&c=421"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=12650&m=1&f=b&v=1.4&c=421&r=&d=n" width=468 height=60 border=0 ></a>
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=12650&amp;m=1&amp;f=b&amp;v=1.4&amp;c=2529&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=12650&m=1&c=2529"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=12650&m=1&f=b&v=1.4&c=2529&r=&d=n" width=468 height=60 border=0 ></a>
 </iframe>
 <noscript>
 <a href="http://media.fastclick.net/w/click.here?sid=12650&m=1&c=1"  target="_blank">
@@ -55,13 +55,13 @@ width=468 height=60 border=1></a></noscript>
 <!--BMARK-->
 <!--HOMEP-->
 <!--SRCH-->
-&nbsp; <a href="http://toolbar.versimedia.com/birthdaycards">Toolbar</a> 
+&nbsp; <a target="FR" href="http://www.friendlyreminder.com/?BCDA">Reminders</a>
 &nbsp; &nbsp; Search for: &nbsp;
-<a href="http://www.birthdaycards.com/search.mod?KW=Flowers">Flowers</a> &nbsp;
-<a href="http://www.birthdaycards.com/search.mod?KW=Gifts">Gifts</a> &nbsp;
-<a href="http://www.birthdaycards.com/search.mod?KW=Yu-Gi-Oh">Yu-Gi-Oh</a> &nbsp; 
-<a href="http://www.birthdaycards.com/search.mod?KW=Toys">Toys</a> &nbsp; 
-<a href="http://www.birthdaycards.com/search.mod?KW=Vacations">Vacations</a>
+<a href="http://search.birthdaycards.com/?METAKW=Flowers">Flowers</a> &nbsp;
+<a href="http://search.birthdaycards.com/?METAKW=Gifts">Gifts</a> &nbsp;
+<a href="http://search.birthdaycards.com/?METAKW=Yu-Gi-Oh">Yu-Gi-Oh</a> &nbsp; 
+<a href="http://search.birthdaycards.com/?METAKW=Toys">Toys</a> &nbsp; 
+<a href="http://search.birthdaycards.com/?METAKW=Vacations">Vacations</a>
 
 </font></td></tr>
 </tbody></table>
@@ -82,6 +82,7 @@ Darien, CT 06820</b><br>
 <b>(203) 853-8143 (Fax)<br>
 <a href="mailto:admin@birthdaycards.com">admin@birthdaycards.com</a></b><p><b>
 </b>
+</p><p>Email addresses of card senders and receives are for internal use only.  We do not sell, rent, lease, or give out your information to any third party without your consent.
 </p><p>For each visitor to our Web page, our Web server automatically recognizes no information regarding the domain or e-mail address.</p>
 <p>We collect only the domain name, but not the e-mail address of visitors to our Web page, aggregate information on what pages consumers access or visit, information volunteered by the consumer, such as survey information and/or site registrations.</p>
 <p>The information we collect is used to improve the content of our Web page, used to customize the content and/or layout of our page for each individual visitor, used to notify consumers about updates to our Web site, not shared with other organizations for commercial purposes.</p>
@@ -94,7 +95,6 @@ Customers may prevent their information from being used for purposes other than 
 <p>Upon request we provide site visitors with access to a description of information that we maintain about them.</p>
 Consumers can access this information by e-mail us at the above address.<p></p>
 Consumers can have this information corrected by or making the appropriate changes in their online account (if applicable).<p></p>
-<p>With respect to security: When we transfer and receive certain types of sensitive information such as financial or health information, we redirect visitors to a secure server and will notify visitors through a pop-up screen on our site.</p>
 <p>If you feel that this site is not following its stated information policy, you may contact us at the above addresses or phone number.</p>
 
 </blockquote>
@@ -111,18 +111,26 @@ Consumers can have this information corrected by or making the appropriate chang
 <a href="http://www.birthdaycards.com/remove.mod">Remove</a> -
 <a href="http://www.birthdaycards.com/links.shtml">Links</a> 
 <p>
-(C) Copyright 2001,2002,2003 Birthday Cards .com
+<table width="800">
+<tbody><tr><td width="125">&nbsp;</td>
+<td align="CENTER"><font size="2">(C) Copyright 2001-2004 Birthday Cards .com</font></td>
+<td width="125" align="RIGHT"><img src="/images/aspp_logo3.GIF" width="125" height="31" border="0"></td>
+</tr></tbody></table>
 </p></font><p><font size="2">
 </font><br>
 <font size="1">
 BC Network: &nbsp;<a onmouseover="window.status='Hanukkah'; return true;" href="http://www.hanukkah.com/?BC">Hanukkah .com</a> -
 <a onmouseover="window.status='Holiday Greetings'; return true;" href="http://www.holidaygreetings.com/?BC">Holiday Greetings .com</a> -
+<a onmouseover="window.status='Greeting Cards'; return true;" href="http://www.greetingCards.com/?BC">Greeting Cards .com</a> -
 <a onmouseover="window.status='Christmas Carols'; return true;" href="http://www.christmascarol.com/?BC">Christmas Carol .com</a> -
 <a onmouseover="window.status='Stocking Stuffers'; return true;" href="http://www.stockingstuffer.com/?BC">Stocking Stuffer .com</a><br>
 <a onmouseover="window.status='Labor Day'; return true;" href="http://www.laborday.com/?BC">Labor Day .com</a> -
 <a onmouseover="window.status='Columbus Day'; return true;" href="http://www.columbusday.com/?BC">Columbus Day .com</a> -
 <a onmouseover="window.status='Veterans Day'; return true;" href="http://www.veteransday.com/?BC">Veterans Day .com</a> -
-<a onmouseover="window.status='St. Valentines Day'; return true;" href="http://www.stvalentinesday.com/?BC">St Valentines Day .com</a><br>
+<a onmouseover="window.status='St. Valentines Day'; return true;" href="http://www.stvalentinesday.com/?BC">St Valentines Day .com</a> - 
+<a onmouseover="window.status='Take Out'; return true;" href="http://www.TakeOut.com/?BC">Take Out .com</a>
+<br>
+<a onmouseover="window.status='Dinner'; return true;" href="http://www.Dinner.com/?BC">Dinner .com</a> -
 <a onmouseover="window.status='Pay Per Click Search Engine'; return true;" href="http://www.goclick.com/?AID=21249">goClick .com PPC Search</a> -
 <a onmouseover="window.status='Virtual Free Greeting Cards'; return true;" href="http://www.virtual-free-greeting-card.com/?BC">Virtual-Free-Greeting-Card.com</a>
 </font></p><p><font size="1">
