--- a/w/we/wea/weatherforyou.com.html
+++ b/w/we/wea/weatherforyou.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the weatherforyou.com privacy policy that was archived on 2004-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040621141359id_/http%3A//www.weatherforyou.com/privacy.shtm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the weatherforyou.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205013936id_/http%3A//www.weatherforyou.com/privacy.shtm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Weather for You Privacy Statement</title>
@@ -7,20 +7,6 @@
 <meta http-equiv="Refresh" content="900">
 <meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; comment &quot;ICRAonline v2.0&quot; l r (cz 1 lz 1 nz 1 oz 1 vz 1) gen true for &quot;http://www.weatherforyou.com&quot; r (nz 1 vz 1 lz 1 oz 1 cz 1) gen true for &quot;http://www.weatherconnect.com/&quot; r (nz 1 vz 1 lz 1 oz 1 cz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l r (n 0 s 0 v 0 l 0) gen true for &quot;http://www.weatherforyou.com&quot; r (n 0 s 0 v 0 l 0) gen true for &quot;http://www.weatherconnect.com/&quot; r (n 0 s 0 v 0 l 0) &quot;http://www.classify.org/safesurf/&quot; l gen true for &quot;http://www.weatherforyou.com/&quot; r (SS~~000 1))">
 <link rel="StyleSheet" href="/css/default.css" type="text/css">
-
-<!-- FASTCLICK.COM POP-UNDER CODE v1.8 for weather4you.com (12 hour) -->
-<script language="javascript"><!--
-var dc=document; var date_ob=new Date();
-dc.cookie='h2=o; path=/;';var bust=date_ob.getSeconds();
-if(dc.cookie.indexOf('e=llo') <= 0 && dc.cookie.indexOf('2=o') > 0){
-dc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
-dc.write('/w/pop.cgi?sid=1529&m=2&tp=2&v=1.8&c='+bust+'"></scr'+'ipt>');
-date_ob.setTime(date_ob.getTime()+43200000);
-dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
-</script><script language="javascript" src="http://media.fastclick.net/w/pop.cgi?sid=1529&amp;m=2&amp;tp=2&amp;v=1.8&amp;c=51"></script>
-<!-- FASTCLICK.COM POP-UNDER CODE v1.8 for weather4you.com -->
-
-<script language="JavaScript" src="/scripts/breakframes.js" type="text/javascript"></script>
 </head>
    <body bgcolor="#ffffff" text="000000" link="0000FF" vlink="0000FF" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0">
       <table width="780" border="0" cellpadding="0" cellspacing="0">
@@ -36,13 +22,8 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                     <td>               <img src="http://www.weatherforyou.com/images/theme1102/index_03-a.gif" width="122" height="80"></td>
                     <td width="468" bgcolor="#002860">
 
-<!-- BEGIN BURST! CODE -->
-<!-- /* Copyright 1997-2003 BURST! Media, LLC. All Rights Reserved. (Version 1.0F) */ --> 
-<iframe src="http://www.burstnet.com/cgi-bin/ads/ad5225a.cgi/NI/if/v=1.0F/sz=468x60A/6141204/RETURN-CODE/" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" width="468" height="60">
-<A target="_top" HREF="http://www.burstnet.com/ads/ad5225a-map.cgi/v=1.0F/sz=468x60A/6141204">
-<IMG SRC="http://www.burstnet.com/cgi-bin/ads/ad5225a.cgi/v=1.0F/sz=468x60A/6141204" border="0" alt="Please support our sponsor."></A>
-</iframe>
-<!-- END BURST! CODE -->
+<iframe id="aebd7fba" name="aebd7fba" src="http://www.weatherforyou.com/advertising/management/phpAdsNew/adframe.php?n=aebd7fba&amp;what=zone:1" title="Ad" frameborder="0" scrolling="no" width="468" height="60"><a href='http://www.weatherforyou.com/advertising/management/phpAdsNew/adclick.php?n=aebd7fba' target='_blank'><img src='http://www.weatherforyou.com/advertising/management/phpAdsNew/adview.php?what=zone:1&amp;n=aebd7fba' border='0' alt='Ad'></a></iframe>
+
 
                     </td>
                     <td valign="bottom" bgcolor="#002860">
@@ -50,8 +31,9 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                     </td>
                     <td bgcolor="white" width="160" align="center" valign="center">
                                  <form method="GET" action="/cgi-bin/hw3/hw3.cgi">
-                                    <img src="http://www.weatherforyou.com/images/theme1102/get-forecast.png" width="140" height="36" border="0" vspace="0" hspace="0"><input type="hidden" name="forecast" value="pass"><input type="hidden" name="pass" value="zandhredirect"><br>
+                                    <img src="http://www.weatherforyou.com/images/theme1102/get-forecast.png" width="140" height="36" border="0" vspace="0" hspace="0"><input type="hidden" name="forecast" value="zandh"><br>
 				    <input type="text" name="pands" size="15" value="">
+                                    <input type="hidden" name="nc" value="forecast,pands,country">
                                     <input type="submit" value="Go" name="Submit"><br>
                                  </form>
                     </td>
@@ -77,7 +59,7 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                             </tr>
                             <tr>
                                 <td width="108">
-                                    <p><a href="/iws/" title="Personal Stations" class="leftmenu">Personal Stations</a></p>
+                                    <p><a href="/pws/" title="Personal Weather Stations" class="leftmenu">Personal Weather Stations</a></p>
                                 </td>
                             </tr>
                             <tr>
@@ -131,6 +113,11 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                                     <p><a href="/maps/fronts.shtml" title="Fronts" class="leftmenu">Fronts</a></p>
                                 </td>
                             </tr>
+                            <tr>
+                            <td width="108">
+                                    <p><img src="/images/NEW.gif" alt="new"><a href="/cgi-bin/hw3/hw3.cgi?forecast=pass&amp;pass=qpfday&amp;dpp=0" title="Precipitation Forecast" class="leftmenu">Precipitation Forecast</a></p>
+                            </td>
+                            </tr>
                         </tbody></table>
                     </td>
                 </tr>
@@ -159,12 +146,6 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                     <td width="111">
                         <table border="0" cellpadding="1" cellspacing="2" width="99" bgcolor="#63739C">
                             <tbody><tr>
-                                <td width="108">
-                                    <p><a href="/cgi-bin/hw3/hw3.cgi?forecast=pass&amp;pass=tafUS" title="Current Conditions" class="leftmenu">Current 
-                                    Conditions</a></p>
-                                </td>
-                            </tr>
-                            <tr>
                                 <td width="108">
                                     <p><a href="/history/" title="Today in History" class="leftmenu">Today 
                                     in History</a></p>
@@ -221,10 +202,10 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                   <area shape="rect" coords="4, 3, 97, 16" href="http://www.weatherforyou.com/" alt="Home">
                 </map>
 	        <map name="ImageMap3">
-                  <area shape="rect" coords="4, 1, 98, 15" href="maps/travelers.shtml" alt="National Forecast">
+                  <area shape="rect" coords="4, 1, 98, 15" href="/maps/travelers.shtml" alt="National Forecast">
                 </map>
 		<map name="ImageMap5">
-                  <area shape="rect" coords="1, 3, 98, 16" href="cgi-bin/hw3/hw3.cgi?forecast=pass&amp;pass=canada_map&amp;country=ca&amp;dpp=1&amp;nc=pands" alt="Canada">
+                  <area shape="rect" coords="1, 3, 98, 16" href="/cgi-bin/hw3/hw3.cgi?forecast=pass&amp;pass=canada_map&amp;country=ca&amp;dpp=1&amp;nc=forecast,pands,country" alt="Canada">
                </map><map name="ImageMap6">
                   <area shape="rect" coords="3, 3, 97, 16" href="http://www.qwikcast.com/currentW.shtml" alt="International" target="_blank">
                </map>
@@ -397,36 +378,22 @@ This section will attempt to evaluate this policy's compact policy against Micro
 IE6 will accept cookies accompanied by this policy under the High, Medium High, Medium, Low, and Accept All Cookies settings.
       </p></td>
       <td valign="top" width="160">
-<script language="JavaScript">
-<!-- /* © 1997-2002 BURST! Media, LLC. All Rights Reserved.*/ 
-var TheAdcode = 'sk5225a'; 
-var bN = navigator.appName; 
-var bV = parseInt(navigator.appVersion); 
-var base='http://www.burstnet.com/'; 
-var Tv=''; 
-var backColor='FFFFFF';
-var fontColor='000000';
-var agt=navigator.userAgent.toLowerCase(); 
-if (bV>=4) 
-  {ts=window.location.pathname+window.location.search; 
-   i=0; Tv=0; while (i< ts.length) 
-      { Tv=Tv+ts.charCodeAt(i); i=i+1; } Tv="/"+Tv;} 
-  else   {Tv=escape(window.location.pathname); 
-   if( Tv.charAt(0)!='/' ) Tv="/"+Tv; 
-          else if (Tv.charAt(1)=="/")
-Tv=""; 
-  if( Tv.charAt(Tv.length-1) == "/") 
-    Tv = Tv + "_";} 
-
-  document.write('<ifr'+'ame id=BURST src="'+base+'cgi-bin/ads/' + 
-  TheAdcode + '.cgi' + Tv +  '/zg' + backColor + 'x' + fontColor + 'l' + fontColor +  
-  'v' + fontColor + 'k' + fontColor + '/RETURN-CODE" width=160 height=600' + 
-  ' marginwidth=0 marginheight=0 hspace=0 vspace=0 ' +
-  'frameborder=0 scrolling=no>');
-  document.write('<A HREF="http://oz.valueclick.com/redirect?host=hs0258074&size=120x600&b=default120&v=0" TARGET="_top"><IMG BORDER="0" WIDTH="120" HEIGHT="600" ALT="Click here to visit our sponsor" SRC="http://oz.valueclick.com/cycle?host=hs0258074&size=120x600&b=default120&noscript=1"></A>');
-  document.write('</ifr'+'ame>');    
-// --> 
-</script><iframe id="BURST" src="http://www.burstnet.com/cgi-bin/ads/sk5225a.cgi/5663/zgFFFFFFx000000l000000v000000k000000/RETURN-CODE" width="160" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><A HREF="http://oz.valueclick.com/redirect?host=hs0258074&size=120x600&b=default120&v=0" TARGET="_top"><IMG BORDER="0" WIDTH="120" HEIGHT="600" ALT="Click here to visit our sponsor" SRC="http://oz.valueclick.com/cycle?host=hs0258074&size=120x600&b=default120&noscript=1"></A></iframe>
+<script type="text/javascript"><!--
+google_ad_client = "pub-1445194321246825";
+google_alternate_ad_url = "http://www.weatherforyou.net/advertising/fastclick/fastclick_sky.htm";
+google_ad_width = 160;
+google_ad_height = 600;
+google_ad_format = "160x600_as";
+google_ad_channel ="2846020422";
+google_ad_type = "text";
+google_color_border = ["000000","6699CC","003366","191933"];
+google_color_bg = ["F0F0F0","003366","003366","333366"];
+google_color_link = ["0000FF","FFFFFF","FF6600","99CC33"];
+google_color_url = ["008000","AECCEB","99CCFF","FFCC00"];
+google_color_text = ["000000","AECCEB","FFFFFF","FFFFFF"];
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 
       </td>
     </tr>
@@ -438,16 +405,10 @@ Tv="";
          <tbody><tr>
             <td align="center">
 
-<!-- BEGIN BURST! CODE -->
-<!-- /* Copyright 1997-2003 BURST! Media, LLC. All Rights Reserved. (Version 1.0F) */ --> 
-<iframe src="http://www.burstnet.com/cgi-bin/ads/ba5225a.cgi/if/v=1.0F/sz=468x60B/7141204/RETURN-CODE/" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" width="468" height="60">
-<A target="_top" HREF="http://www.burstnet.com/ads/ba5225a-map.cgi/v=1.0F/sz=468x60B/7141204">
-<IMG SRC="http://www.burstnet.com/cgi-bin/ads/ba5225a.cgi/v=1.0F/sz=468x60B/7141204" border="0" alt="Please support our sponsor."></A>
-</iframe>
-<!-- END BURST! CODE -->
+<iframe id="a88728fd" name="a88728fd" src="http://www.weatherforyou.com/advertising/management/phpAdsNew/adframe.php?n=a88728fd&amp;what=zone:3" title="Ad" frameborder="0" scrolling="no" width="468" height="60"><a href='http://www.weatherforyou.com/advertising/management/phpAdsNew/adclick.php?n=a88728fd' target='_blank'><img src='http://www.weatherforyou.com/advertising/management/phpAdsNew/adview.php?what=zone:3&amp;n=a88728fd' border='0' alt='Ad'></a></iframe>
 
-<p class="footer">
-<font face="Verdana,Arial"><small>Copyright © 2004 Torsitano Internet Services, Lincoln, CA. All rights reserved. Use of this site subject to the <a href="/disclaimer.htm">Terms &amp; Conditions</a>.&nbsp; Never use weather forecasts from this or any Internet site to make decisions regarding life or property.&nbsp;&nbsp; Like all things, this site belongs to <a href="http://www.greatcom.org/resources/whoisjesusorig/?src=www.weatherforyou.com/">Jesus Christ</a>... He just trusts me to maintain it.&nbsp; E-mail questions or comments to <a href="mailto:webmaster@weatherforyou.com">webmaster@weatherforyou.com</a>.</small></font></p></td>
+
+<p class="footer">Copyright © 2004 Torsitano Internet Services, Lincoln, CA. All rights reserved. Use of this site subject to the <a href="/disclaimer.htm">Terms &amp; Conditions</a>.&nbsp; Never use weather forecasts from this or any Internet site to make decisions regarding life or property.&nbsp;&nbsp; Like all things, this site belongs to <a href="http://www.greatcom.org/resources/whoisjesusorig/?src=www.weatherforyou.com/">Jesus Christ</a>... He just trusts me to maintain it.&nbsp; E-mail questions or comments to <a href="mailto:webmaster@weatherforyou.com">webmaster@weatherforyou.com</a>.</p></td>
     </tr>
  
       </tbody></table>
