--- a/l/la/lak/lakersground.net.html
+++ b/l/la/lak/lakersground.net.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the lakersground.net privacy policy that was archived on 2004-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040609010205id_/http%3A//www.lakersground.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lakersground.net privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205030240id_/http%3A//www.lakersground.net/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>LakersGround.net - Premier Coverage of the L.A. Lakers</title>
-<link rel="SHORTCUT ICON" href="http://www.lakersground.net/images/lg.ico">
+<link rel="shortcut icon" href="images\lg.ico">
 </head>
-<body>
+<body>	
 
 <script language="JavaScript"> 
 <!-- /* Copyright 1997-2003 BURST! Media, LLC. All Rights Reserved. (Version 1.0J) */ 
@@ -64,7 +64,7 @@ if (agt.indexOf("mac")==-1) {
 <!-- END BURST CODE -->
 
 <center>
-<p><embed src="/images/newmenu.swf" width="750" height="40"></p>
+<p><embed src="/images/newmenu.swf" width="750" height="50"></p>
 
 <table width="700" cellpadding="3" cellspacing="0">
 <tbody><tr><td width="200">
@@ -72,15 +72,19 @@ if (agt.indexOf("mac")==-1) {
 </td><td width="500">
 <table cellpadding="1" cellspacing="0">
 <tbody><tr><td bgcolor="3c003c">
-<!-- BEGIN RICH-MEDIA BURST! CODE --> 
+
+<!-- BEGIN RICH-MEDIA BURST! CODE -->
 <script language="JavaScript">
-<!--
-ShowBurstAd('ad10031a','468','60','468x60A','1', '', '');
-// --></script><iframe id="BURST" src="http://www.burstnet.com/cgi-bin/ads/ad10031a.cgi/NI/if/v=1.0J/sz=468x60A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20040609010205id_%252Fhttp%25253A%252F%252Fwww.lakersground.net%252Fprivacy.php/5415/RETURN-CODE" width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><a href="http://www.burstnet.com/ads/ad10031a-map.cgi/v=1.0J/sz=468x60A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20040609010205id_%252Fhttp%25253A%252F%252Fwww.lakersground.net%252Fprivacy.php/5415" target=_top><img src="http://www.burstnet.com/cgi-bin/ads/ad10031a.cgi/v=1.0J/sz=468x60A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20040609010205id_%252Fhttp%25253A%252F%252Fwww.lakersground.net%252Fprivacy.php/5415" border="0" alt="Click Here"></a></iframe><div><script src="http://www.burstnet.com/cgi-bin/ads/ad10031a.cgi/sz=0X0MN/v=1.0J/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20040609010205id_%252Fhttp%25253A%252F%252Fwww.lakersground.net%252Fprivacy.php/5415/RETURN-CODE/JS/"></script></div>
-<noscript><a href="http://www.burstnet.com/ads/ad10031a-map.cgi/ns/v=1.0J/sz=468x60A/" target="_top">
-<img src="http://www.burstnet.com/cgi-bin/ads/ad10031a.cgi/ns/v=1.0J/sz=468x60A/" border="0" alt="Click Here"></a> 
+rnum=Math.round(Math.random() * 100000);
+
+document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad10031a.cgi/v=2.0S/sz=468x60A/'+rnum+'/NI/RETURN-CODE/JS/"></scr'+'ipt>');
+
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad10031a.cgi/v=2.0S/sz=468x60A/76911/NI/RETURN-CODE/JS/"></script>
+<noscript><a href="http://www.burstnet.com/ads/ad10031a-map.cgi/ns/v=2.0S/sz=468x60A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad10031a.cgi/ns/v=2.0S/sz=468x60A/" border="0" alt="Click Here"></a>
 </noscript>
 <!-- END BURST CODE -->
+
 <center><font color="ffffff" face="arial" style="font-size:8pt">Support our sponsors | </font>
 <a href="http://survey.burstmedia.com/cgi-win/client.exe?readers,welcome,ad10031a,2000"><font color="ffffff" face="arial" style="font-size:8pt">LG.net Survey</font></a> 
 </center></td></tr></tbody></table>
@@ -89,7 +93,7 @@ ShowBurstAd('ad10031a','468','60','468x60A','1', '', '');
 
 <table width="750" cellpadding="5" border="0" cellspacing="0">
 <tbody><tr><td colspan="3" width="750" bgcolor="3c003c">
-<p><font style="font-size:8pt" color="ffffff" face="arial"><b>LakersGround.net</b> - Tuesday, June 8, 2004</font></p>
+<p><font style="font-size:8pt" color="ffffff" face="arial"><b>LakersGround.net</b> - Saturday, December 4, 2004</font></p>
 </td></tr>
 
 <tr><td width="35" valign="top" background="images/left.jpg">
@@ -127,12 +131,12 @@ Our web sites are not set up to track, collect or distribute personal informatio
 A cookie is a small amount of data that is sent to your browser from a Web server and stored on your computer's hard drive. LG.net uses non-identifying cookies to provide easier site navigation and access to forums. You can still access LG.net if your browser is set to reject cookies, but you will not be able to post on the LG.net forums. Our cookies do not generate personal data, do not read personal data from your machine and are never tied to anything that could be used to identify you. 
 </p><p>
 <b>Problems or Complaints with Our Privacy Policy  </b><br>
-If you have a complaint about compliance with this privacy policy, you may contact us at privacy@lakersground.net. 
+If you have a complaint about compliance with this privacy policy, you may post a comment in the <a href="http://forums.lakersground.net/newtopic.php?forum=3" target="_top">LG Forums</a>. 
 </p>
 <!-- End Content -->
 
 </li></font></td>
-<td width="100" valign="top" background="images/leftbanner.jpg">
+<td width="35" valign="top" background="http://www.lakersground.net/images/left.jpg">
 &nbsp;
 </td></tr>
 <tr><td height="5" width="750" colspan="3" bgcolor="3c003c">
