--- a/p/pm/pmo/pmo.gov.sg.html
+++ b/p/pm/pmo/pmo.gov.sg.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pmo.gov.sg privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610110231id_/http%3A//www.pmo.gov.sg/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pmo.gov.sg privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205044907id_/http%3A//www.pmo.gov.sg/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>PMO - Government of Singapore Privacy Policy</title>
@@ -154,15 +154,13 @@
     </tr>
     <tr>
       <td>
-        <div align="center"><font color="#999999"><a href="http://app.pmo.gov.sg/whatsnew.asp" class="linksmmaroon">What's
-          New</a>  o <a href="http://web9.internet.gov.sg/mita_sgdi/owa/pub_directory.ministrylst?agency_subtype=dept&amp;agency_id=0000000014" class="linksmmaroon">Directory</a>
-          o <a href="http://www.cabinet.gov.sg" class="linksmmaroon">The
-          Cabinet</a> o <a href="http://www.sprinter.gov.sg/" class="linksmmaroon">Press
-          Releases</a><br>
-          <a href="http://www.sgnews.gov.sg" class="linksmmaroon">Singapore News</a>
-          o <a href="http://www.gov.sg/interviews.htm" class="linksmmaroon">Government
-          Interviews</a> o <a href="http://www.gov.sg" class="linksmmaroon">Singapore
-          Government Website</a></font></div>
+        <div align="center"><font color="#999999"><a href="http://app.pmo.gov.sg/whatsnew.asp" class="linksmmaroon">What's 
+          New</a> o <a href="http://web9.internet.gov.sg/mita_sgdi/owa/pub_directory.ministrylst?agency_subtype=dept&amp;agency_id=0000000014" class="linksmmaroon">Directory</a> 
+          o <a href="http://www.cabinet.gov.sg" class="linksmmaroon">The Cabinet</a> 
+          <br>
+          o <a href="http://www.sprinter.gov.sg/" class="linksmmaroon">Press Releases</a> 
+          o <a href="http://www.gov.sg" class="linksmmaroon">Singapore Government 
+          Website</a></font></div>
       </td>
       <td>&nbsp;</td>
     </tr>
